# ecuador-2026-analytics

./: .gitignore  DATA_TAXONOMY.md
Aggregated/: match_metrics.csv  metric_dictionary.csv  metrics_meta.json  player_season_core.csv  player_similarity.csv  team_match_metrics.csv  team_season_core.csv  team_season_metrics.csv  zone_summary.csv
Cache/: .xt_grid_cache.json
ClearanceLandingModel/: headed_clearance_landing_model.joblib  headed_clearance_predictions.csv  headed_clearances_dataset.csv  model_metrics.json
Cross Models/: ecuador_2026_cross_models_paper.docx  ecuador_2026_cross_models_report.xlsx  open_play_cross_events_scored.csv
Danger/: 2026-02-20_Orense SC - Liga Deportiva Universitaria de Quito_danger_models.csv  2026-02-21_Barcelona SC - CD Técnico Universitario_danger_models.csv  2026-02-21_SD Aucas - Mushuc Runa SC_danger_models.csv  2026-02-22_CSD Independiente del Valle - Guayaquil City FC_danger_models.csv  2026-02-22_CSD Macará - Leones FC_danger_models.csv  2026-02-22_Delfín SC - CD Cuenca_danger_models.csv  2026-02-23_Libertad Fútbol Club - Manta FC_danger_models.csv  2026-02-27_CD Técnico Universitario - Orense SC_danger_models.csv  2026-02-28_CS Emelec - Delfín SC_danger_models.csv  2026-02-28_Guayaquil City FC - SD Aucas_danger_models.csv  2026-02-28_Leones FC - Libertad Fútbol Club_danger_models.csv  (+126 more)
GDA/: gda_model_meta.json  (+5 more)
lamberts_goalkeeper_model/: README.md  pyproject.toml
lamberts_goalkeeper_model/src/lamberts_goalkeeper_model/: __init__.py  cli.py  loader.py  model.py
lamberts_goalkeeper_model/tests/: test_smoke.py
(+306 files in other folders)
