[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lamberts-goalkeeper-model"
version = "0.1.0"
description = "Composite goalkeeper value model (13 submodels) built automatically from a season data folder."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.scripts]
lamberts-goalkeeper-model = "lamberts_goalkeeper_model.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
